--- a/styles/style.css
+++ b/styles/style.css
@@ -43,10 +43,9 @@ ol {
 .content {
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  align-content: center;
   gap: 30px;
   min-width: 1140px;
+  margin: auto;
 }
 
 .search-form {
@@ -63,8 +62,8 @@ ol {
   align-items: start;
   gap: 30px;
   height: 298px;
-  overflow: scroll;
-  overflow-x: hidden;
+  overflow: auto;
+  overflow-x: auto;
 }
 
 .content__details {
@@ -110,7 +109,6 @@ ol {
   height: 103px;
   object-fit: cover;
   object-position: center;
-  background-size: contain;
 }
 
 .content__video-card-description-container {
@@ -184,12 +182,11 @@ ol {
 }
 
 .content__video-card-description {
-  font-family: Fira Sans Condensed, sans-serif;
-  font-weight: 400;
-  font-size: 18px;
+  font-family: inherit;
+  font-weight: inherit;
+  font-size: inherit;
   font-style: normal;
   line-height: 16.2px;
-  letter-spacing: 1.5px;
 }
 
 .visually-hidden {
@@ -213,6 +210,7 @@ ol {
 
 .search-form__label {
   display: flex;
+  align-content: center;
   gap: 5px;
   width: fit-content;
   cursor: pointer;
@@ -234,8 +232,8 @@ ol {
 
 .search-form__textfield::placeholder {
   color: rgba(255, 255, 255, 0.7);
-  font-family: Fira Sans Condensed, sans-serif;
-  font-weight: 400;
+  font-family: inherit;
+  font-weight: inherit;
   font-size: 18px;
   font-style: normal;
   line-height: normal;
@@ -272,7 +270,7 @@ ol {
 
 /*состояния текстового поля*/
 .search-form__label .search-form__pseudo-checkbox {
-  display: inline-block;
+  display: block;
   display: flex;
   flex-wrap: wrap;
   place-content: center;
